hphp/hack/test/typecheck/tconst/method_swap_error.php.exp
File "method_swap_error.php", line 21, characters 14-23:
Invalid argument (Typing[4110])
File "method_swap_error.php", line 15, characters 5-11:
This is the expression dependent type <expr#201>::T
  that is compatible with the abstract type constant X::T
  that is compatible with an array key (int/string)
File "method_swap_error.php", line 21, characters 5-7:
  where '<expr#201>' is a reference to this expression
File "method_swap_error.php", line 4, characters 14-14:
  resulting from expanding the type constant this::T as follows:
    X::T
File "method_swap_error.php", line 4, characters 19-26:
It is incompatible with an array key (int/string)
File "method_swap_error.php", line 4, characters 14-14:
Considering the constraint on 'X::T'
File "method_swap_error.php", line 10, characters 26-32:
Considering the constraint on '<expr#202>::T'
File "method_swap_error.php", line 21, characters 14-16:
  where '<expr#202>' is a reference to this expression
File "method_swap_error.php", line 4, characters 14-14:
  resulting from expanding the type constant this::T as follows:
    X::T
